--- a/css/style.css
+++ b/css/style.css
@@ -17,12 +17,12 @@
 html, body {
   padding: 0;
   font-family: 'Helvetica', sans-serif;
-  background: ##e6e5e5;
+  background: #fff;
   margin: 0;
   font-size: 0.9rem;
   letter-spacing: 0.02rem;
   line-height: 1.5;
-  color: ##282828;
+  color: #282828;
 }
 
 main {
@@ -105,6 +105,7 @@ button {
   color: rgba(0,0,0,0.5);
   margin: 2vh 0;
 }
+
 .doc-id span {
-  border-bottom: 2px solid #7070ff;
+  border-bottom: 2px solid #d05141;
 }
